can delete post/replies

--- a/views/admin-lte/catalogs/actionBarCourse.ejs
+++ b/views/admin-lte/catalogs/actionBarCourse.ejs
@@ -53,7 +53,7 @@
     <ul class="">
         <li ng-show="enrolled || isOwner">
             <a style="cursor: pointer;"
-               data-toggle="modal" data-target="#addNewTopic"
+               data-toggle="modal" data-target="#addNewTopicModal"
                title="Add or remove preview widgets">
             <i class="ionicons ion-android-add"></i> &nbsp; ADD NEW TOPIC</a>
             </li>
