discussion fix missing controller

--- a/views/discussion/addNewReplyModal.ejs
+++ b/views/discussion/addNewReplyModal.ejs
@@ -1,6 +1,6 @@
 <!-- course edit form -->
 <div class="row">
-    <div class="modal" id="addReplyModal" tabindex="-1" role="dialog"
+    <div class="modal" id="addNewReplyModal" tabindex="-1" role="dialog"
          aria-labelledby="Reply Form" aria-hidden="true">
         <section class="content" ng-controller="ReplyController">
             <div class="row row-centered">
