discussion looks better

--- a/views/admin-lte/catalogs/actionBarCourse.ejs
+++ b/views/admin-lte/catalogs/actionBarCourse.ejs
@@ -56,7 +56,9 @@
                data-toggle="modal" data-target="#addNewTopicModal"
                title="Add or remove preview widgets">
             <i class="ionicons ion-android-add"></i> &nbsp; ADD NEW TOPIC</a>
-            </li>
         </li>
+    </ul>
+
+    <ul class="actionBar-discussion-buttons">
     </ul>
 </script>
