--- a/views/admin-lte/catalogs/courseDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentPreview.ejs
@@ -10,7 +10,7 @@
                 <strong>
                     {{user.username}}
                 </strong> on <b>
-                {{course.dateAdded}}</b>
+                {{course.dateAdded | relativeDate}}</b>
 
                 <h1>
                     <span class="visible-xs" style="margin-left:15px"></span>
