--- a/views/discussion/topics.ejs
+++ b/views/discussion/topics.ejs
@@ -1,64 +1,102 @@
+<link href="/discussion/discussion.css" rel="stylesheet" type="text/css"/>
 
-<div  ng-controller="DiscussionController">
+<div ng-controller="DiscussionController">
     <div class="row">
         <div class="col-md-5" id="topicLists">
-            <div ng-hide="topics">
-                <h3>No Topics to Show</h3>
+            <div ng-show="topics.length == 0" class="posts-list">
+                <ul class="posts">
+                    <li class="post">
+                        <h5>There is no topic to show, you can add a new one by clicking the
+                            "ADD NEW TOPIC" button on the top right of this page</h5>
+                    </li>
+                </ul>
             </div>
 
-            <div ng-show="topics">
-                <ul>
-                    <li ng-repeat="topic in topics">
+            <div class="posts-list" ng-show="topics.length > 0">
+                <ul class="posts">
+                    <li class="post" ng-repeat="topic in topics" ng-class="(pid==topic.discussion._id)?'active':''">
                         <h4><a ng-href="#/cid/{{course._id}}?tab=discussion&pid={{topic.discussion._id}}">
                             {{topic.discussion.title}}
                         </a></h4>
-                        Posted at: {{topic.discussion.dateAdded}}
+                        <span class="posted-at">
+                                Posted at: {{topic.discussion.dateAdded | relativeDate}}
+                        </span>
                     </li>
                 </ul>
             </div>
 
         </div>
         <div class="col-md-6" id="topicContents">
-            <div ng-hide="replies && topics.length > 0">
-                <h3>Please pick one from the posts</h3>
+            <div ng-hide="pid || topics.length == 0">
+                <h4>Please pick one from the left</h4>
             </div>
 
-            <a style="cursor: pointer;"
-               data-toggle="modal" data-target="#addReplyModal"
-               ng-click="currentReplyingTo = currentTopic.discussion._id"
-               title="Reply">REPLY</a>
-            <a style="cursor: pointer;" ng-show="currentTopic.createdBy==$root.user._id"
-               ng-click="deletePost(currentTopic.discussion._id)"
-               title="delete">DELETE</a>
+            <div ng-show="pid" class="replies-wrapper">
 
-            <div ng-show="currentTopic">
-                <h4>{{currentTopic.title}}</h4>
-            </div>
+                <div ng-show="currentTopic" class="currentTopic">
+                    <div class="box box-solid">
+                        <div class="box-header with-border">
+                            <h4>{{currentTopic.title}}</h4>
+                            <span class="posted-at"><strong>Posted At:</strong>
+                                {{currentTopic.dateAdded | relativeDate}}</span>
+                        </div>
+                        <div class="box-body">
 
-            <div ng-show="replies">
-                <ul class="replies">
-                    <li ng-repeat="re in replies">
-                            <div class="reply">{{re.content}}</div>
-                        <div class="postedAt">
-                            Posted at: {{re.dateAdded}}
+                            <p class="topicContent" ng-bind-html="currentTopic.content | unsafe">
+                            </p>
                         </div>
-                        <div class="editReplyButton">
-                            <a ng-show="re.createdBy==$root.user._id" style="cursor: pointer;"
-                               data-toggle="modal" data-target="#editReplyModal"
-                               title="Edit"
-                               ng-click="currentEditPost=re">EDIT</a>
+                    </div>
+                </div>
+
+                <div ng-show="replies.length == 0 && pid">
+                    <br><br>
+
+                    <div class="box box-solid">
+                        <div class="box-body">There is no reply yet.
+                            You can reply by clicking "REPLY" button at the top right of this page.
                         </div>
-                        <div class="deleteReplyButton">
-                            <a ng-show="re.createdBy==$root.user._id" style="cursor: pointer;"
-                               title="Delete"
-                               ng-click="deletePost(re._id)">EDIT</a>
-                            <a style="cursor: pointer;" ng-show="re.createdBy==$root.user._id"
-                               ng-click="deletePost(re._id)"
-                               title="delete">DELETE</a>
-                        </div>
-                    </li>
-                </ul>
+                    </div>
+                </div>
+
+
+                <div ng-show="replies && pid">
+                    <ul class="replies">
+                        <li class="reply" ng-repeat="re in replies">
+                            <div class="box box-solid">
+                                <div class="box-body">
+                                    <span class="posted-at">
+                                        <strong>Posted at:</strong> {{re.dateAdded | relativeDate}}
+                                    </span>
+
+                                    <p class="reply" ng-bind-html="re.content | unsafe"></p>
+
+                                </div>
+                                <div class="box-footer">
+                                    <div class="replyControl"
+                                         ng-show="re.createdBy==$root.user._id && re.content !='[DELETED]'"
+                                            >
+                                        <div class="editReplyButton">
+                                            <a ng-show="re.createdBy==$root.user._id" style="cursor: pointer;"
+                                               data-toggle="modal" data-target="#editReplyModal"
+                                               title="Edit"
+                                               ng-click="editReply(re)"
+                                               class="btn btn-warning btn-xs"
+                                                    >EDIT</a>
+                                        </div>
+                                        <div class="deleteReplyButton">
+                                            <a style="cursor: pointer;" ng-show="re.createdBy==$root.user._id"
+                                               ng-click="deletePost(re._id)"
+                                               title="delete"
+                                               class="btn btn-danger btn-xs">DELETE</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
+            <!-- /. show when pid -->
         </div>
     </div>
 
