--- a/views/admin-lte/catalogs/actionBarCourse.ejs
+++ b/views/admin-lte/catalogs/actionBarCourse.ejs
@@ -50,15 +50,20 @@
 </script>
 
 <script type="text/ng-template" id="actionBar-course-discussion">
-    <ul class="">
-        <li ng-show="enrolled || isOwner">
-            <a style="cursor: pointer;"
-               data-toggle="modal" data-target="#addNewTopicModal"
-               title="Add or remove preview widgets">
-            <i class="ionicons ion-android-add"></i> &nbsp; ADD NEW TOPIC</a>
-        </li>
+    <ul ng-controller="ActionBarController">
+            <li ng-show="enrolled || isOwner">
+                <a style="cursor: pointer;"
+                   data-toggle="modal" data-target="#addNewTopicModal"
+                   title="Add or remove preview widgets">
+                    <i class="ionicons ion-android-add"></i> &nbsp; ADD NEW TOPIC</a>
+            </li>
+            <li ng-repeat="EAM in extraActionsMenu" ng-show="EAM.html" ng-bind-html="EAM.html|unsafe">
+            </li>
+
+            <li ng-repeat="EAM in extraActionsMenu" ng-show="EAM.clickAction">
+                <a class="cursor" ng-show="EAM.clickAction" ng-click="EAM.clickAction(EAM.clickParams)" ng-bind-html="EAM.title|unsafe">
+                </a>
+            </li>
     </ul>
 
-    <ul class="actionBar-discussion-buttons">
-    </ul>
 </script>
