--- a/views/admin-lte/catalogs/courseDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentPreview.ejs
@@ -9,7 +9,7 @@
                 Started By:
                 <strong>
                     {{user.username}}
-                </strong> on <b>
+                </strong> at <b>
                 {{course.dateAdded | relativeDate}}</b>
 
                 <h1>
@@ -36,6 +36,13 @@
      ng-controller="widgetController"
      ng-init="location='course-preview';
               initiateDraggableGrid('course-preview');">
+
+    <div ng-show="!widgets || widgets.length == 0" class="empty-widget">
+        There is no registered widget here.
+        <span ng-show="isOwner" class="empty-widget">
+          Go to the widget store to add one.
+        </span>
+    </div>
 
     <div class="grid-stack-item"
          data-gs-locked="yes"
