--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -125,6 +125,14 @@
 
                         </div>-->
                         <div >
+                            <div ng-controller="AnnotationZoneListController">
+                              <div id="annotationZoneList" ng-repeat="annZone in annZones">
+                                <div>
+                                  {{annZone.name}}
+                                </div>
+                              </div>
+
+                            <div>
                             <div ng-repeat="comment in comments">
                               <div>
                                   <label class='authorLabel' onclick='authorLabelClick($(this))'>{{comment.author}}</label><label>({{comment.date}}</label>
@@ -135,7 +143,7 @@
                                 </div>
 
                               </div>
-                            </div>
+                          </div>
                         </div>
                         <div>
                         </div>
