Extended tag submission

--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -68,7 +68,11 @@
                              </div>
                              <div class="control-group">
                                <div class="controls">
-                                 <input class="form-control" id="tags" name="tags" placeholder="tags">
+                                 <input class="form-control" id="tagNames" name="tagNames" placeholder="tagNames">
+                                 <input class="form-control" id="tagRelPos" name="tagRelPos" placeholder="tagRelPos">
+                                 <input class="form-control" id="tagRelCoord" name="tagRelCoord" placeholder="tagRelCoord">
+                                 <input class="form-control" id="tagColor" name="tagColor" placeholder="tagColor">
+
                                </div>
                              </div>
 
@@ -80,11 +84,11 @@
                            </fieldset>
                         </form>
                         <div class="controls">
-                          <button class="btn btn-default" onclick="displayComments();">Show comments</button>
+                          <!--<button class="btn btn-default" onclick="displayComments();">Show comments</button>
                           <div >
                             <button class="btn btn-default" ng-click="loadComments('renderedText','true','{}')">Show comments Angular</button>
                             <button class="btn btn-default" ng-click="loadComments('renderedText','false','{}')">Show comments Angular2</button>
-                          </div>
+                          </div>-->
                           Sort by:
                           <div >
 
