Rating Widget and CSS
Add static rating widgets in course-listing and course-homepage, fix
CSS issues and widget layout

--- a/views/admin-lte/catalogs/courseDetailContentAnalytics.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentAnalytics.ejs
@@ -21,7 +21,7 @@
                             <i class="fa fa-times"></i></button>
                     </div>
                 </div>
-                <div class="box-body">
+                <div class="box-body-widget">
 
                     <!-- start widget render -->
                     <div ng-include src="wdg.widgetId.entryPoint"
