--- a/public/course-analytics/user_profile.scss
+++ b/public/course-analytics/user_profile.scss
@@ -1,18 +1,22 @@
-* {margin: 0; padding: 0;}
 $grey: #D2D6DE;
 $light_grey: #EEEEEE;
 
 .grid-stack-item-content {
   .box {
+
     border: 1px solid $light_grey;
     border-top: 3px solid $grey;
   }
 
 }
 
+//for my-course widget box
 .box-body-widget {
+
   border: 1px $grey;
   ul {
+    margin: 0;
+    padding:0;
     list-style-type: none;
 
   }
@@ -45,10 +49,11 @@ $light_grey: #EEEEEE;
 
   }
 
-  /*
-  li:hover {
-    background: #eee;
-    cursor: pointer;
-  }
-  */
 }
+
+//for course-analytics widget
+.cat-home-rating {
+  color: green;
+
+}
+
