--- a/views/course-analytics/topContributors.ejs
+++ b/views/course-analytics/topContributors.ejs
@@ -2,17 +2,17 @@
         <ul>
             <li>
                 <img src="/course-analytics/img/jon_snow.png">
-                <h5>Jon Snow</h5>
+                <h5>Jon</h5>
                 30 nodes created
             </li>
             <li>
                 <img src="/course-analytics/img/arya.png">
-                <h5>Arya Stark</h5>
+                <h5>Arya</h5>
                 <p>21 nodes created</p>
             </li>
             <li>
                 <img src="/course-analytics/img/tyrion_lannister.png">
-                <h5>Tyrion Lannister</h5>
+                <h5>Tyrion</h5>
                 <p>17 nodes created</p>
             </li>
         </ul>
