Added functionality to call client functions once angular has loaded values

--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -126,16 +126,20 @@
 
                         </div>-->
                         <div >
-                            <div ng-controller="AnnotationZoneListController">
-
-                              <div id="annotationZoneList" ng-repeat="annZone in annZones">
-                                <div>
+                            <div id="annZoneList" ng-controller="AnnotationZoneListController">
+                              Annotation Zone List:
+                              <div id="annotationZoneList" ng-repeat="annZone in annZones" ng-cloak>
+                                <div class="{{annZone.name}}">
                                   {{annZone.name}}
+                                  {{annZone.color}}
+
+                                  </script>
                                 </div>
                               </div>
 
                             <div>
-                            <div ng-repeat="comment in comments">
+                            Comment List:
+                            <div ng-repeat="comment in comments" ng-cloak>
                               <div>
                                   <label class='authorLabel' onclick='authorLabelClick($(this))'>{{comment.author}}</label><label>({{comment.date}}</label>
 
@@ -166,6 +170,8 @@
 
 
 
+
+<script src="/slide-viewer/js/slideviewer.js"></script>
 
 
 <script src="/jquery/jquery-ui.min.js"></script>
