Some cleanup and functions for annotation zone drawing interactivity

--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -83,6 +83,8 @@
                              </div>
                            </fieldset>
                         </form>
+                        <button class="btn btn-default" onclick="addAnnotationZoneData('test',1,2,3,4,'Red');">CREATE TEST ANNOTATION ZONE</button>
+                        
                         <div class="controls">
                           <!--<button class="btn btn-default" onclick="displayComments();">Show comments</button>
                           <div >
