fix bug discussion. can delete, can edit, can add new, and click on the new discussion

--- a/views/discussion/addNewReplyModal.ejs
+++ b/views/discussion/addNewReplyModal.ejs
@@ -25,7 +25,7 @@
                                                      textarea-height="180px"
                                                      textarea-name="Content"
                                                      textarea-required
-                                                     ng-model="formData.content"
+                                                     ng-model="formNewData.content"
                                                      textarea-menu="menu" >
                                             </wysiwyg>
                                         </div>
