--- a/views/admin-lte/discussion/topics.ejs
+++ b/views/admin-lte/discussion/topics.ejs
@@ -1,10 +1,10 @@
-<link href="/discussion/discussion.css" rel="stylesheet" type="text/css"/>
+<link href="/admin-lte/css/posts.css" rel="stylesheet" type="text/css"/>
 
 <div ng-controller="DiscussionController">
     <div class="row">
         <div class="col-md-5" id="topicLists">
 
-            <h4f>The Discussion Topics</h4f>
+            <h4>The Discussion Topics</h4>
 
             <div ng-show="topics.length == 0" class="posts-list">
                 <ul class="posts">
