--- a/views/admin-lte/catalogs/actionBarCourse.ejs
+++ b/views/admin-lte/catalogs/actionBarCourse.ejs
@@ -54,7 +54,7 @@
             <li ng-show="enrolled || isOwner">
                 <a style="cursor: pointer;"
                    data-toggle="modal" data-target="#addNewTopicModal"
-                   title="Add or remove preview widgets">
+                   title="Add New Topic">
                     <i class="ionicons ion-android-add"></i> &nbsp; ADD NEW TOPIC</a>
             </li>
 
