--- a/views/admin-lte/catalogs/actionBarNode.ejs
+++ b/views/admin-lte/catalogs/actionBarNode.ejs
@@ -23,24 +23,30 @@
     </ul>
 </script>
 
-<script type="text/ng-template" id="actionBar-node-map">
-    <ul class="">
-    </ul>
-</script>
-
-<script type="text/ng-template" id="actionBar-node-external-resources">
-    <ul class="">
-        <a style="cursor: pointer"
-           data-toggle="modal" data-target="#addBookmark"
-           title="Add External Resource">
-            <i class="ionicons ion-edit"></i> &nbsp; ADD</a>
-    </ul>
-</script>
-
-<script type="text/ng-template" id="actionBar-node-update">
+<script type="text/ng-template" id="actionBar-node-updates">
     <ul class="">
         <a style="cursor: pointer"
            title="Add External Resource">
             <i class="ionicons ion-edit"></i> &nbsp; FILTER</a>
     </ul>
+</script>
+
+<script type="text/ng-template" id="actionBar-node-links">
+    <ul ng-controller="ActionBarController">
+        <li ng-show="enrolled || isOwner">
+            <a style="cursor: pointer;"
+               data-toggle="modal" data-target="#addNewLinksModal"
+               title="Add New Link">
+                <i class="ionicons ion-android-add"></i> &nbsp; ADD NEW LINK</a>
+        </li>
+
+        <li ng-repeat="EAM in extraActionsMenu">
+            <a ng-if="EAM.html" ng-bind-html="EAM.html|unsafe"></a>
+            <i class="ionicons ion-android-more-vertical" ng-if="EAM.separator">&nbsp;</i>
+            <a class="cursor" title="EAM.aTitle" ng-show="EAM.clickAction" ng-click="EAM.clickAction(EAM.clickParams)" ng-bind-html="EAM.title|unsafe">
+            </a>
+        </li>
+
+    </ul>
+
 </script>
