--- a/views/admin-lte/catalogs/courseDetail.ejs
+++ b/views/admin-lte/catalogs/courseDetail.ejs
@@ -41,7 +41,7 @@
                     </div>
 
                     <div class="tab-pane" id="discussion">
-                        <% include ../../discussion/topics %>
+                        <% include ../discussion/topics %>
                     </div>
 
                     <div class="tab-pane" id="updates">
