--- a/views/admin-lte/catalogs/nodeDetailLeftTab.ejs
+++ b/views/admin-lte/catalogs/nodeDetailLeftTab.ejs
@@ -7,16 +7,10 @@
             <span>Home</span></a></li>
 
     <li ng-show="enrolled || isOwner">
-        <a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab=map"
-           data-toggle="tab" data-target="#map">
-            <i class="ionicons ion-map"></i>
-            <span>Video Map</span></a></li>
-
-    <li ng-show="enrolled || isOwner">
-        <a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab=external-resources"
-           data-toggle="tab" data-target="#external-resources">
+        <a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab=links"
+           data-toggle="tab" data-target="#links">
             <i class="ionicons ion-link"></i>
-            <span>External Resources</span></a></li>
+            <span>Links</span></a></li>
 
     <li ng-show="enrolled || isOwner">
         <a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab=updates" ng-show="user"
