can save, edit, delete bookmark

--- a/views/admin-lte/links/links.ejs
+++ b/views/admin-lte/links/links.ejs
@@ -44,6 +44,7 @@
                             <span class="posted-at">
                                 Posted <strong>{{currentLink.dateAdded | relativeDate}}</strong>
                             By <strong>{{currentLink.createdBy.username}}</strong>
+                                <br>{{currentLink.content}}
                             </span>
                         </div>
                         <div class="box-body">
