--- a/views/admin-lte/catalogs/actionBarNode.ejs
+++ b/views/admin-lte/catalogs/actionBarNode.ejs
@@ -5,7 +5,7 @@
         </li>
         <li ng-show="isOwner">
             <a style="cursor: pointer"
-               data-toggle="modal" data-target="#editView"
+               data-toggle="modal" data-target="#nodeEditView"
                title="Edit this content node">
                 <i class="ionicons ion-edit"></i> &nbsp; EDIT</a>
         </li>
