--- a/views/admin-lte/catalogs/courseDetailContentMap.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentMap.ejs
@@ -14,7 +14,7 @@
         <span ng-show="data.type != 'contentNode'" > {{data.name}} </span>
 
         <!-- subtopic menu-->
-        <ul class="dropdown-menu dropdown-course" ng-show="data.type=='subTopic'">
+        <ul class="dropdown-menu dropdown-course" ng-show="data.type=='subTopic' && !data.isDeleted">
             <li>
                 <a class="cursor" data-toggle="modal" data-target="#addSubTopicModal"
                    ng-click="setMode('add', 'subTopic', data)">
@@ -31,13 +31,13 @@
             </li>
             <li class="separator"></li>
             <li>
-                <a class="cursor" data-toggle="modal" data-target="#editContentNodeModal"
-                   ng-click="setMode('add', 'contentNode', data)"><i class="ionicons ion-edit"></i> Edit</a>
+                <a class="cursor" data-toggle="modal" data-target="#editSubTopicModal"
+                   ng-click="setMode('edit', 'subTopic', data)"><i class="ionicons ion-edit"></i> Edit</a>
             </li>
 
             <li>
-                <a class="cursor" data-toggle="modal" data-target="#editContentNodeModal"
-                   ng-click="setMode('add', 'contentNode', data)"><i class="ionicons ion-close"></i> Delete</a>
+                <a class="cursor"
+                   ng-click="deleteNode(data)"><i class="ionicons ion-close"></i> Delete</a>
             </li>
         </ul>
 
@@ -45,16 +45,6 @@
         <ul class="dropdown-menu dropdown-course" ng-show="data.type=='contentNode'">
             <!-- analytics -->
             <li class="topic-icon-analytics" ng-bind-html="widgets[data._id]">
-            </li>
-            <li class="separator"></li>
-            <li>
-                <a class="cursor" data-toggle="modal" data-target="#editContentNodeModal"
-                   ng-click="setMode('add', 'contentNode', data)"><i class="ionicons ion-edit"></i> Edit</a>
-            </li>
-
-            <li>
-                <a class="cursor" data-toggle="modal" data-target="#editContentNodeModal"
-                   ng-click="setMode('add', 'contentNode', data)"><i class="ionicons ion-close"></i> Delete</a>
             </li>
         </ul>
     </div>
@@ -82,7 +72,10 @@
             <ul class="dropdown-menu dropdown-course">
                 <li>
                     <a class="" data-toggle="modal" data-target="#addSubTopicModal"
-                       ng-click="setMode('add', 'subTopic')">Add A Sub Topic</a>
+                       ng-click="setMode('add', 'subTopic')">
+                        <i class="ionicons ion-android-add"></i>
+                        <i class="ionicons ion-android-folder"></i>
+                        Add A Sub Topic</a>
                 </li>
             </ul>
         </div>
@@ -90,23 +83,7 @@
     </div>
 
     <!-- modal contents -->
-    <!-- add Sub Topic form -->
-    <div class="row">
-        <div class="modal" id="addSubTopicModal" tabindex="-1" role="dialog"
-             aria-labelledby="add sub topic" aria-hidden="true">
-            <div ng-include="'/course/addSubTopic'"></div>
-        </div>
-    </div>
-
-    <!-- add add Content Node Modal form -->
-    <div class="row">
-        <div class="modal" id="addContentNodeModal" tabindex="-1" role="dialog"
-             aria-labelledby="add sub topic" aria-hidden="true">
-
-            <div ng-include="'/course/addContentNode'"></div>
-        </div>
-    </div>
-
+    <% include courseDetailContentMapModals %>
     <!-- /.modal contents -->
 </div>
 </div>
