can edit content node

--- a/views/admin-lte/catalogs/nodeDetailModal.ejs
+++ b/views/admin-lte/catalogs/nodeDetailModal.ejs
@@ -2,9 +2,9 @@
 
 <!-- course edit form -->
 <div class="row">
-    <div class="modal" id="nodeEditView" tabindex="-1" role="dialog"
+    <div class="modal" id="editContentNodeModal" tabindex="-1" role="dialog"
          aria-labelledby="edit view" aria-hidden="true">
-        <div ng-include="'/course/edit'"></div>
+        <div ng-include="'/course/editContentNode'"></div>
     </div>
 </div>
 <!-- widgetGallery for course analytics -->
@@ -12,5 +12,14 @@
     <div class="modal" id="widgetGalleryNodeAnalytics" tabindex="-1" role="dialog"
          aria-labelledby="wigets gallery node Analytics" aria-hidden="true" ng-init="initData('node-analytics')">
         <div ng-include="'/widgets/gallery'"></div>
+    </div>
+</div>
+
+<!-- edit Content Node Modal form -->
+<div class="row">
+    <div class="modal" id="addContentNodeModal" tabindex="-1" role="dialog"
+         aria-labelledby="add sub topic" aria-hidden="true">
+
+        <div ng-include="'/course/editContentNode'"></div>
     </div>
 </div>
