--- a/views/admin-lte/catalogs/actionBarNode.ejs
+++ b/views/admin-lte/catalogs/actionBarNode.ejs
@@ -1,13 +1,20 @@
 <script type="text/ng-template" id="actionBar-node-preview">
-    <ul class="">
+    <ul ng-controller="ActionBarController">
         <li ng-show="isOwner">
             You created this content node
         </li>
         <li ng-show="isOwner">
             <a style="cursor: pointer"
-               data-toggle="modal" data-target="#nodeEditView"
+               data-toggle="modal" data-target="#editContentNodeModal"
                title="Edit this content node">
                 <i class="ionicons ion-edit"></i> &nbsp; EDIT</a>
+        </li>
+
+        <li ng-repeat="EAM in extraActionsMenu">
+            <a ng-if="EAM.html" ng-bind-html="EAM.html|unsafe"></a>
+            <i class="ionicons ion-android-more-vertical" ng-if="EAM.separator">&nbsp;</i>
+            <a class="cursor" title="EAM.aTitle" ng-show="EAM.clickAction" ng-click="EAM.clickAction(EAM.clickParams)" ng-bind-html="EAM.title|unsafe">
+            </a>
         </li>
     </ul>
 </script>
