--- a/views/admin-lte/catalogs/editSubTopicModal.ejs
+++ b/views/admin-lte/catalogs/editSubTopicModal.ejs
@@ -13,42 +13,16 @@
                 </div>
 
                 <div class="box-body no-border">
-                    <form class="" role="form" ng-submit="saveContentNode()">
+                    <form class="" role="form" ng-submit="saveEditNode()">
                         <fieldset>
                             <div class="control-group">
                                 <label class="control-label" for="name">{{currentNodeAction.typeText}} name</label>
                                 <p class="help-block">{{currentNodeAction.typeText}} name can contain any letters or numbers</p>
                                 <div class="controls">
                                     <input type="text" id="name" name="name" placeholder="" class="form-control"
-                                           ng-model="formData.name">
+                                           ng-model="currentEditNode.name">
                                 </div>
                             </div>
-
-                            <div class="col-md-6" id="pdf">
-                                <div class="control-group">
-                                    <p></p>
-                                    <label class="control-label" for="pdf">Upload a PDF</label>
-                                    <div class="controls">
-                                        <div class="btn btn-sm btn-default"
-                                             ngf-select accept="application/pdf" ngf-accept="'application/pdf'"
-                                             ng-model="filespdf" ngf-multiple="false" ngf-max-size='1000000'><i class="fa fa-file-pdf-o"></i> &nbsp; Select a pdf file</div>
-                                        &nbsp; <span ng-repeat="f in filespdf">{{f.name}}</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6" id="video">
-                                <div class="control-group">
-                                    <p></p>
-                                    <label class="control-label" for="pdf">Upload Video File</label>
-                                    <div class="controls">
-                                        <div class="btn btn-sm btn-default"
-                                             ngf-select accept="video/*" ngf-accept="'video/*'"
-                                             ng-model="filesvideo" ngf-multiple="false" ngf-max-size='100000000'><i class="`"></i> &nbsp; Select a video file</div>
-                                        &nbsp; <span ng-repeat="f in filesvideo">{{f.name}}</span>
-                                    </div>
-                                </div>
-                            </div>
-
                             <div class="control-group">
                                 <p class="help-block"></p>
                                 <p class="help-block"></p>
